# ForgeMind

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.ai/: ARCHITECTURE.md  CONVENTIONS.md  PHASES.md  README.md
.ai/prompts/: phase-bootstrap.md  review.md
configs/: .gitkeep  readonly.toml  standard.toml  strict.toml
data/: README.md
docs/: getting-started.md  index.md
docs/adr/: 0000-template.md  0001-llm-decides-runtime-controls.md  0002-tool-mediated-side-effects.md  0003-explicit-run-state-machine.md  0004-separate-reviewer-role.md  0005-human-approval-gates.md  0006-framework-independence.md  README.md
docs/agent/: README.md
docs/architecture/: PROPOSAL.md  README.md
docs/config/: profiles.md
docs/contracts/: README.md
docs/engineering/: architecture-principles.md  development-process.md  overview.md  phase-workflow.md  testing-strategy.md  tooling.md
docs/memory/: README.md
docs/planning/: README.md
docs/providers/: README.md
docs/review/: README.md
docs/tools/: README.md
examples/: README.md
scripts/: dev_info.py
src/forgemind/: __init__.py
src/forgemind/agent/: __init__.py  actor.py  orchestrator.py  reporting.py  transitions.py
src/forgemind/api/: __init__.py
src/forgemind/cli/: __init__.py
src/forgemind/config/: __init__.py  budgets.py  defaults.py  env.py  loader.py  merge.py  models.py
src/forgemind/core/: __init__.py  actions.py  approval.py  enums.py  errors.py  memory.py  messages.py  plan.py  protocols.py  provider.py  reflection.py  report.py  review.py  state.py  task.py  tools.py  validation.py
src/forgemind/eval/: __init__.py
src/forgemind/memory/: __init__.py  budget.py  long_term.py  retention.py  snapshot.py  store.py  working.py
src/forgemind/observability/: __init__.py
src/forgemind/planning/: __init__.py  planner.py
src/forgemind/plugins/: __init__.py
src/forgemind/policy/: __init__.py  decisions.py  engine.py  paths.py
src/forgemind/providers/: __init__.py  errors.py  factory.py  http.py  normalize.py  openai_compat.py  stub.py
src/forgemind/reflection/: __init__.py  reflector.py
src/forgemind/review/: __init__.py  diff.py  reviewer.py
src/forgemind/tools/: __init__.py  base.py  executor.py  registry.py  test_runner.py  validation.py
tests/: conftest.py
tests/fixtures/repair_repo/: README.md  calc.py  test_calc.py
tests/fixtures/sample_repo/: README.md  (+1 more)
tests/integration/: .gitkeep
tests/unit/: test_actions.py  test_budgets.py  test_config_loader.py  test_contracts_serialization.py  test_engineering_report.py  test_long_term_memory.py  test_openai_provider.py  test_orchestrator.py  test_plan_reflect_integration.py  test_planner.py  test_policy_engine.py  test_protocols.py  test_provider_factory.py  test_reflector.py  test_repair_loop.py  test_repo_tools.py  test_review_integration.py  test_reviewer.py  test_smoke.py  test_stub_provider.py  test_task_and_state.py  test_tool_registry_executor.py  test_tool_validation.py  test_transitions.py  test_working_memory.py  test_write_test_tools.py
(+8 files in other folders)
