[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "forgemind"
version = "0.1.0.dev0"
description = "ForgeMind — Autonomous Software Engineering Agent runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "ForgeMind Contributors" },
]
keywords = [
  "ai",
  "agents",
  "llm",
  "runtime",
  "tools",
  "forgemind",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.14",
  "pre-commit>=4.0",
]
api = []
all = [
  "forgemind[dev,api]",
]

[project.urls]
Homepage = "https://github.com/<org>/forgemind"
Documentation = "https://github.com/<org>/forgemind/tree/main/docs"
Roadmap = "https://github.com/<org>/forgemind/blob/main/ROADMAP.md"
Issues = "https://github.com/<org>/forgemind/issues"

# CLI entrypoint reserved for Phase 9
# [project.scripts]
# forgemind = "forgemind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forgemind"]

[tool.hatch.build.targets.wheel.sources]
"src/forgemind" = "forgemind"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/ROADMAP.md",
  "/CONTRIBUTING.md",
  "/CHANGELOG.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "unit: fast isolated unit tests",
  "integration: cross-module or I/O tests",
  "slow: intentionally slow tests",
]

[tool.coverage.run]
branch = true
source = ["forgemind"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501", # handled by formatter line-length preference in reviews
]

[tool.ruff.lint.isort]
known-first-party = ["forgemind"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
packages = ["forgemind"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
